--- a/CSS/todovaporstore.css
+++ b/CSS/todovaporstore.css
@@ -1,5 +1,6 @@
 @charset "UTF-8";
 /*  Aquí empieza el CSS */
+/* Desafío SASS2 */
 @media (min-width: 320px) {
   /* Acá empieza la flex box */
   .flex {
@@ -18,65 +19,90 @@
     padding: 16%;
     display: flex;
     flex-direction: column;
-    flex-wrap: wrap; }}
+    flex-wrap: wrap; } }
 
 /* Acá termina la flex box */
 /* Selector de Clases */
 .backg {
-    background-image: linear-gradient(gray, white); }
+  background-image: linear-gradient(gray, white); }
 
 .cuerpo {
-    background-color: #8EBBDF; }
+  background-image: linear-gradient(gray, white); }
 
 .footer {
-    display: flex;
-    flex-flow: column;
-    align-items: center;
-    background-image: linear-gradient(gray, white); }
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  background-image: linear-gradient(gray, white); }
+
 .footer__box {
-    display: flex;
-    justify-content: space-evenly;
-    width: 30%;}
+  display: flex;
+  justify-content: space-evenly;
+  width: 30%; }
+
 .footer__box__component {
-    padding: 15%;
-    display: flex;
-    flex-flow: column wrap;}
+  padding: 15%;
+  display: flex;
+  flex-flow: column wrap; }
+
 .footer__redes {
-    display: flex;
-    width: 80%;
-    justify-content: flex-end;
-    padding-bottom: 2%;}    
+  display: flex;
+  width: 80%;
+  justify-content: flex-end;
+  padding-bottom: 2%; }
+
 .footer__sub-2 {
-    text-align: center;}
+  text-align: center; }
+
 .footer__sub-3 {
-    text-align: center;}
+  text-align: center; }
+
 .footer__sub-3-1 {
-    text-align: end;}
+  text-align: end; }
+
 .footer__img {
-    border-radius: 5%;}
+  border-radius: 5%; }
 
 .fa {
-    padding: 20px;
-    font-size: 30px;
-    text-align: center;
-    text-decoration: none;
-    margin: 5px 2px;
-    border-radius: 50%;}
-.fa:hover {
-    opacity: 0.7;}
-.fa-instagram {
-    background: #125688;
-    color: white;}
-.fa-facebook {
-    background: #3B5998;
-    color: white;}
+  padding: 20px;
+  font-size: 30px;
+  text-align: center;
+  text-decoration: none;
+  margin: 5px 2px;
+  border-radius: 50%; }
 
+.fa:hover {
+  opacity: 0.7; }
+
+.fa-instagram {
+  background: #125688;
+  color: white; }
+
+.fa-facebook {
+  background: #3B5998;
+  color: white; }
 
 .pic {
   display: block;
   margin-left: auto;
   margin-right: auto;
   width: 50%; }
+
+.pagename {
+  font-size: 65px;
+  font-weight: 900;
+  letter-spacing: 20px;
+  text-align: center;
+  color: white;
+  text-shadow: yellow 0 0 5px, red 0 0 5px;
+  text-transform: uppercase;
+  background-image: url(../imagenes/back1.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  padding: 200px;
+  margin: 0; }
 
 .titulos {
   font-size: 40px;
@@ -125,7 +151,22 @@ h2 {
   text-align: center;
   text-decoration: underline; }
 
-.parrafos2 {
+.questions {
+  background-image: linear-gradient(gray, white);
+  display: flex;
+  justify-content: flex-start;
+  flex-wrap: wrap; }
+
+.questions_box {
+  background-color: lightpink;
+  border-radius: 10px;
+  margin: 10px 0px 10px 10px;
+  width: 50%; }
+
+.questions_box_title {
+  color: #125688; }
+
+.questions_box_content {
   color: #333;
   font-family: 'Verdana', sans-serif;
   font-size: 16px;
@@ -133,6 +174,9 @@ h2 {
   line-height: 150%;
   text-indent: 30px;
   margin: 0; }
+
+.form {
+  margin-left: 40px; }
 
 /* --------------------- No lo uso
 ul {
@@ -189,11 +233,11 @@ display:block;
 
 .flex__box__component {
   padding: 16px; }
-.flex__sub{
-    text-align: center;
-    font-size: 110%;
-    padding-top: 20px;
-}
+
+.flex__sub {
+  text-align: center;
+  font-size: 110%;
+  padding-top: 20px; }
 
 /* Acá termina la flex box */
 /* Acá empieza la grid */
@@ -239,13 +283,14 @@ display:block;
 .warning {
   width: 100%;
   height: 50%;
+  display: block;
   background-color: #ffffff;
   color: #000000;
   border: solid #000000;
   text-align: center;
-  font-size: 14px;
+  font-size: 16px;
   font-weight: 600;
-  line-height: 45px;
+  line-height: 60px;
   margin: 0; }
 
 /* Selector de ID */
