--- a/css/todovaporstore.css
+++ b/css/todovaporstore.css
@@ -1,6 +1,7 @@
 @charset "UTF-8";
 /*  Aquí empieza el CSS */
 /* Desafío SASS2 */
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap");
 @media (min-width: 320px) {
   /* Acá empieza la flex box */
   .flex {
@@ -28,40 +29,6 @@
 
 .cuerpo {
   background-image: linear-gradient(gray, white); }
-
-.footer {
-  display: flex;
-  flex-flow: column;
-  align-items: center;
-  background-image: linear-gradient(gray, white); }
-
-.footer__box {
-  display: flex;
-  justify-content: space-evenly;
-  width: 30%; }
-
-.footer__box__component {
-  padding: 15%;
-  display: flex;
-  flex-flow: column wrap; }
-
-.footer__redes {
-  display: flex;
-  width: 80%;
-  justify-content: flex-end;
-  padding-bottom: 2%; }
-
-.footer__sub-2 {
-  text-align: center; }
-
-.footer__sub-3 {
-  text-align: center; }
-
-.footer__sub-3-1 {
-  text-align: end; }
-
-.footer__img {
-  border-radius: 5%; }
 
 .fa {
   padding: 20px;
@@ -178,30 +145,6 @@ h2 {
 .form {
   margin-left: 40px; }
 
-/* --------------------- No lo uso
-ul {
-list-style: none;
-list-style-type: circle;
-list-style-position: inside;
-}
-li {
-display: inline-block;
-width: 25%;
-position:relative;
-font-size: 14px
-}
-ul ul {
-position: absolute;
-display: none;
-flex-flow: row;
-}
-ul ul li {
-display: block;
-}
-ul li:hover ul {
-display:block;
-}
------------------------ No lo uso */
 .tablas {
   background-color: green; }
 
@@ -306,3 +249,191 @@ display:block;
 
 #rojo {
   background-color: orangered; }
+
+/* Carrousel */
+.carousel-control-prev-icon,
+.carousel-control-next-icon {
+  height: 100px;
+  width: 100px;
+  outline: black;
+  background-size: 100%, 100%;
+  border-radius: 50%;
+  border: 1px solid black;
+  background-image: none; }
+
+.carousel-control-next-icon:after {
+  content: '>';
+  font-size: 55px;
+  color: red; }
+
+.carousel-control-prev-icon:after {
+  content: '<';
+  font-size: 55px;
+  color: red; }
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  text-transform: capitalize;
+  text-decoration: none;
+  font-family: Arial, Helvetica, sans-serif;
+  transition: all 0.4s cubic-bezier(0, 1.57, 0.67, 1.18); }
+
+/* Galeria de productos */
+.box-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  background: #ccc; }
+
+.box {
+  flex: 1 1 500px;
+  background: #fff;
+  border: 1px solid rgba(0, 0, 0, 0.3);
+  position: relative;
+  overflow: hidden;
+  margin: 20px; }
+
+.box .image {
+  padding: 10px;
+  background: #eee;
+  text-align: center; }
+
+.box .image img {
+  height: 350px;
+  width: 350px;
+  object-fit: cover;
+  filter: drop-shadow(0 3px 5px rbga(0, 0, 0.7)); }
+
+.box .info .title {
+  padding: 10px;
+  color: #666;
+  font-size: 20px; }
+
+.box .info .subinfo {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 15px 10px;
+  border-top: 1px solid rgba(0, 0, 0, 0.3); }
+
+.box .info .subinfo .price {
+  color: #ff3300;
+  font-size: 20px; }
+
+.box .info .subinfo .price, span {
+  font-size: 15px;
+  color: #999;
+  text-decoration: line-through; }
+
+.box .info .subinfo .stars, i {
+  color: orange;
+  font-size: 17px; }
+
+.box .overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 223px;
+  width: 100%;
+  background: rgba(0, 0, 0, 0.3);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: none;
+  transform: scale(0); }
+
+.box:hover .overlay {
+  transform: scale(1); }
+
+.box .overlay a {
+  color: #666;
+  background: #fff;
+  margin: 10px;
+  padding: 13px 15px;
+  font-size: 15px;
+  transform: translateY(-150px);
+  transition-property: transform;
+  transition-delay: calc(.1s * var(--i)); }
+
+.box .overlay a:hover {
+  color: orange; }
+
+.box:hover .overlay a {
+  transform: translateY(0px); }
+
+.footer {
+  background-color: #24262b;
+  padding-top: 20px; }
+
+.footer_container {
+  max-width: 1170px;
+  margin: auto; }
+
+.footer-row {
+  display: flex;
+  flex-wrap: wrap; }
+
+ul {
+  list-style: none; }
+
+.footer-col {
+  width: 25%;
+  padding: 0 15px; }
+
+.footer-col h4 {
+  font-size: 18px;
+  color: #ffffff;
+  text-transform: capitalize;
+  margin-bottom: 35px;
+  font-weight: 500;
+  position: relative; }
+
+.footer-col h4::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: -10px;
+  background-color: #e91e63;
+  height: 2px;
+  box-sizing: border-box;
+  width: 50px; }
+
+.footer-col ul li:not(:last-child) {
+  margin-bottom: 10px; }
+
+.footer-col ul li a {
+  font-size: 16px;
+  text-transform: capitalize;
+  color: #ffffff;
+  text-decoration: none;
+  font-weight: 300;
+  color: #bbbbbb;
+  display: block;
+  transition: all 0.3s ease; }
+
+.footer-col ul li a:hover {
+  color: #ffffff;
+  padding-left: 8px; }
+
+.footer-col .social-links a {
+  display: inline-block;
+  height: 40px;
+  width: 40px;
+  background-color: rgba(255, 255, 255, 0.2);
+  margin: 0 10px 10px 0;
+  text-align: center;
+  line-height: 40px;
+  border-radius: 50%;
+  color: #ffffff;
+  transition: all 0.5 ease; }
+
+.footer-col .social-links a:hover {
+  color: #24262b;
+  background-color: #ffffff; }
+
+body {
+  line-height: 1.5;
+  font-family: 'Poppins', sans-serif; }
