--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,15 +1,11 @@
 @charset "UTF-8";
 /*  Aquí empieza el CSS */
-
 /* Desafío SASS2 */
-$fondo: linear-gradient(gray, white);
-$ancho: 50%;
-
 @media (min-width: 320px) {
   /* Acá empieza la flex box */
   .flex {
     display: flex;
-    background-image: $fondo;
+    background-image: linear-gradient(gray, white);
     width: 75%;
     flex-direction: column;
     align-items: center; }
@@ -23,62 +19,34 @@ $ancho: 50%;
     padding: 16%;
     display: flex;
     flex-direction: column;
-    flex-wrap: wrap; }}
+    flex-wrap: wrap; } }
 
 /* Acá termina la flex box */
-
-
-
 /* Selector de Clases */
 .backg {
-    background-image: $fondo; }
+  background-image: linear-gradient(gray, white); }
 
 .cuerpo {
-    background-image: $fondo; }
-
-.footer {
-    display: flex;
-    flex-flow: column;
-    align-items: center;
-    background-image: $fondo; }
-.footer__box {
-    display: flex;
-    justify-content: space-evenly;
-    width: 30%;}
-.footer__box__component {
-    padding: 15%;
-    display: flex;
-    flex-flow: column wrap;}
-.footer__redes {
-    display: flex;
-    width: 80%;
-    justify-content: flex-end;
-    padding-bottom: 2%;}    
-.footer__sub-2 {
-    text-align: center;}
-.footer__sub-3 {
-    text-align: center;}
-.footer__sub-3-1 {
-    text-align: end;}
-.footer__img {
-    border-radius: 5%;}
+  background-image: linear-gradient(gray, white); }
 
 .fa {
-    padding: 20px;
-    font-size: 30px;
-    text-align: center;
-    text-decoration: none;
-    margin: 5px 2px;
-    border-radius: 50%;}
-.fa:hover {
-    opacity: 0.7;}
-.fa-instagram {
-    background: #125688;
-    color: white;}
-.fa-facebook {
-    background: #3B5998;
-    color: white;}
+  padding: 20px;
+  font-size: 30px;
+  text-align: center;
+  text-decoration: none;
+  margin: 5px 2px;
+  border-radius: 50%; }
 
+.fa:hover {
+  opacity: 0.7; }
+
+.fa-instagram {
+  background: #125688;
+  color: white; }
+
+.fa-facebook {
+  background: #3B5998;
+  color: white; }
 
 .pic {
   display: block;
@@ -93,18 +61,14 @@ $ancho: 50%;
   text-align: center;
   color: white;
   text-shadow: yellow 0 0 5px, red 0 0 5px;
-  text-transform: uppercase; 
-  background-image:url(../imagenes/back1.jpg);
+  text-transform: uppercase;
+  background-image: url(../imagenes/back1.jpg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   width: 100%;
   padding: 200px;
-  margin: 0;
-
-
-}
-
+  margin: 0; }
 
 .titulos {
   font-size: 40px;
@@ -112,7 +76,7 @@ $ancho: 50%;
   letter-spacing: 10px;
   text-align: center;
   text-shadow: black 6px 6px 8px;
-  text-transform: uppercase;}
+  text-transform: uppercase; }
 
 .titulos2 {
   background-repeat: no-repeat;
@@ -153,22 +117,21 @@ h2 {
   text-align: center;
   text-decoration: underline; }
 
-
-.questions{
-  background-image: $fondo;
+.questions {
+  background-image: linear-gradient(gray, white);
   display: flex;
-  justify-content:flex-start;
-  flex-wrap: wrap;}
+  justify-content: flex-start;
+  flex-wrap: wrap; }
 
-.questions_box{
-background-color: lightpink;
-border-radius: 10px;
-margin: 10px 0px 10px 10px;
-width: 50%;}
+.questions_box {
+  background-color: lightpink;
+  border-radius: 10px;
+  margin: 10px 0px 10px 10px;
+  width: 50%; }
 
-.questions_box_title{
-  color: #125688;}
-  
+.questions_box_title {
+  color: #125688; }
+
 .questions_box_content {
   color: #333;
   font-family: 'Verdana', sans-serif;
@@ -179,53 +142,28 @@ width: 50%;}
   margin: 0; }
 
 .form {
-  margin-left: 40px;
+  margin-left: 40px; 
 }
-
-/* --------------------- No lo uso
-ul {
-list-style: none;
-list-style-type: circle;
-list-style-position: inside;
-}
-li {
-display: inline-block;
-width: 25%;
-position:relative;
-font-size: 14px
-}
-ul ul {
-position: absolute;
-display: none;
-flex-flow: row;
-}
-ul ul li {
-display: block;
-}
-ul li:hover ul {
-display:block;
-}
------------------------ No lo uso */
 .tablas {
-  background-color: green; }
-
+  background-color: green; 
+}
 .fondos {
-  background-image: url(/imagenes/back.jpg); }
-
+  background-image: url(/imagenes/back.jpg); 
+}
 .imgprod {
   margin: 0px 10px 0px 10px;
   border-radius: 10px;
-  border: 5px solid #000000; }
-
+  border: 5px solid #000000; 
+}
 .menu {
   display: fixed;
   top: 200;
-  left: 0; }
-
+  left: 0; 
+}
 /* Acá empieza la flex box */
 .flex {
   display: flex;
-  background-image: $fondo;
+  background-image: linear-gradient(gray, white);
   width: 100%;
   flex-direction: column;
   align-items: center; }
@@ -237,13 +175,14 @@ display:block;
 
 .flex__box__component {
   padding: 16px; }
-.flex__sub{
-    text-align: center;
-    font-size: 110%;
-    padding-top: 20px;
-}
+
+.flex__sub {
+  text-align: center;
+  font-size: 110%;
+  padding-top: 20px; }
 
 /* Acá termina la flex box */
+
 /* Acá empieza la grid */
 .grid-container {
   display: grid;
@@ -253,36 +192,37 @@ display:block;
   grid-column-gap: 10px;
   width: 100%;
   height: 100%;
-  background-color: darkgray; }
-
+  background-color: darkgray; 
+}
 .titulo {
   grid-column: 1 / 5;
   background-color: #8EBBDF;
-  border-radius: 10px; }
-
+  border-radius: 10px; 
+}
 .titulo2 {
   grid-column: 1 / 5;
   grid-row: 3 / 4;
-  background-color: #8EBBDF; }
-
+  background-color: #8EBBDF; 
+}
 .titulo3 {
   grid-column: 1 / 5;
   grid-row: 5 / 6;
-  background-color: #8EBBDF; }
-
+  background-color: #8EBBDF; 
+}
 .caja {
   display: flex;
   justify-content: center;
-  align-items: center; }
-
+  align-items: center; 
+}
 /* Acá termina la grid */
 .movi:hover {
   border-radius: 10px;
-  transform: scale(2, 2) translate(-50px, 0); }
-
+  transform: scale(2, 2) translate(-50px, 0); 
+}
 .movi2:hover {
   border-radius: 10px;
-  transform: scale(2, 2) translate(50px, 0); }
+  transform: scale(2, 2) translate(50px, 0); 
+}
 
 .warning {
   width: 100%;
@@ -310,3 +250,194 @@ display:block;
 
 #rojo {
   background-color: orangered; }
+
+/* Carrousel */
+  .carousel-control-prev-icon,
+  .carousel-control-next-icon {
+    height: 100px;
+    width: 100px;
+    outline: black;
+    background-size: 100%, 100%;
+    border-radius: 50%;
+    border: 1px solid black;
+    background-image: none;
+  }
+  .carousel-control-next-icon:after
+  {
+    content: '>';
+    font-size: 55px;
+    color: red;
+  }
+  .carousel-control-prev-icon:after {
+    content: '<';
+    font-size: 55px;
+    color: red;
+  }
+
+ *{
+   margin:0; padding: 0;
+   box-sizing: border-box;
+   text-transform: capitalize;
+   text-decoration: none;
+   font-family: Arial, Helvetica, sans-serif;
+   transition: all 0.4s cubic-bezier(0,1.57,.67,1.18);
+ }
+/* Galeria de productos */
+.box-container{
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   flex-wrap: wrap;
+   background: #ccc;
+ }
+.box{
+   flex: 1 1 500px;
+   background: #fff;
+   border: 1px solid rgba(0,0,0,.3);
+   position: relative;
+   overflow: hidden;
+   margin: 20px;
+ }
+.box .image{
+   padding: 10px;
+   background: #eee;
+   text-align: center;
+ }
+.box .image img{
+   height: 350px;
+   width: 350px;
+   object-fit: cover;
+   filter: drop-shadow(0 3px 5px rbga(0,0,0.7));
+ }
+ .box .info .title{
+    padding: 10px;
+    color: #666;
+    font-size: 20px;
+ }
+ .box .info .subinfo{
+   display: flex;
+   align-items: center;
+   justify-content: space-between;
+   padding: 15px 10px;
+   border-top: 1px solid rgba(0,0,0,.3)
+ }
+ .box .info .subinfo .price{
+   color: #ff3300;
+   font-size: 20px;
+ }
+ .box .info .subinfo .price , span{
+   font-size: 15px;
+   color: #999;
+   text-decoration: line-through;
+ }
+ .box .info .subinfo .stars , i{
+   color: orange;
+   font-size: 17px;
+ }
+ .box .overlay{
+   position: absolute;
+   top:0; left: 0;
+   height: 223px;
+   width: 100%;
+   background: rgba(0,0,0,.3);
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   transition: none;
+   transform: scale(0);
+ }
+ .box:hover .overlay{
+  transform: scale(1);
+ }
+ .box .overlay a{
+   color: #666;
+   background: #fff;
+   margin: 10px;
+   padding: 13px 15px;
+   font-size: 15px;
+   transform: translateY(-150px);
+   transition-property: transform;
+   transition-delay: calc(.1s * var(--i));
+ }
+ .box .overlay a:hover{
+   color: orange;
+ }
+ .box:hover .overlay a{
+   transform: translateY(0px);
+ }
+
+.footer{
+   background-color: #24262b;
+   padding-top: 20px;
+ }
+.footer_container{
+   max-width: 1170px;
+   margin:auto;
+ }
+.footer-row{
+   display: flex;
+   flex-wrap: wrap;
+ }
+ ul{
+   list-style: none
+ }
+ .footer-col{
+   width: 25%;
+   padding: 0 15px;
+ }
+ .footer-col h4{
+   font-size: 18px;
+   color: #ffffff;
+   text-transform: capitalize;
+   margin-bottom: 35px;
+   font-weight: 500;
+   position: relative;
+ }
+ .footer-col h4::before{
+   content: '';
+   position: absolute;
+   left: 0;
+   bottom: -10px;
+   background-color: #e91e63;
+   height: 2px;
+   box-sizing: border-box;
+   width: 50px;
+ }
+ .footer-col ul li:not(:last-child){
+   margin-bottom: 10px;
+ }
+ .footer-col ul li a{
+   font-size: 16px;
+   text-transform: capitalize;
+   color: #ffffff;
+   text-decoration: none;
+   font-weight: 300;
+   color: #bbbbbb;
+   display: block;
+   transition: all 0.3s ease;
+  }
+  .footer-col ul li a:hover{
+    color: #ffffff;
+    padding-left: 8px;
+  }
+  .footer-col .social-links a{
+    display: inline-block;
+    height: 40px;
+    width: 40px;
+    background-color: rgba(255,255,255,0.2);
+    margin: 0 10px 10px 0;
+    text-align: center;
+    line-height: 40px;
+    border-radius: 50%;
+    color: #ffffff;
+    transition: all 0.5 ease;
+  }
+  .footer-col .social-links a:hover{
+   color: #24262b;
+   background-color: #ffffff;
+  }
+  @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
+body{
+	line-height: 1.5;
+	font-family: 'Poppins', sans-serif;
+}
