--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,52 +1,53 @@
 @charset "UTF-8";
-/*  Aquí empieza el CSS */
-/* Desafío SASS2 */
-@media (min-width: 320px) {
-  /* Acá empieza la flex box */
-  .flex {
-    display: flex;
-    background-image: linear-gradient(gray, white);
-    width: 75%;
-    flex-direction: column;
-    align-items: center; }
-  .flex__box {
-    padding: 10% 0px 10% 0px;
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    justify-content: center; }
-  .flex__box__component {
-    padding: 16%;
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap; } }
+*{
+  margin:0; padding: 0;
+  box-sizing: border-box;
+  text-transform: capitalize;
+  text-decoration: none;
+  font-family: Arial, Helvetica, sans-serif;
+  transition: all 0.4s cubic-bezier(0,1.57,.67,1.18);
 
-/* Acá termina la flex box */
+/*  Responsive CSS */
+@media only screen and (max-width: 1024px){
+.footer-col{
+ width: 50% !important;
+ margin-bottom: 30px !important;
+}
+.pagename {
+ padding: 0 !important;
+ margin: 0 !important;
+ font-size: 35px !important;
+ letter-spacing: 10px !important;
+ height: 150px !important;
+}
+.warning{
+  line-height:25px !important; 
+  font-size: 14px !important;
+  padding: 12px !important;
+}
+}
+@media only screen and (max-width: 767px){
+.footer-col{
+  width: 100% !important;
+}
+.pagename {
+  padding: 0 !important;
+  letter-spacing: 0px !important; 
+  font-size: 25px !important; 
+  height: 100px !important; 
+}
+.warning{
+  line-height:25px !important; 
+  font-size: 12px !important;
+  padding: 10px !important;
+}
+}
 /* Selector de Clases */
 .backg {
   background-image: linear-gradient(gray, white); }
 
 .cuerpo {
   background-image: linear-gradient(gray, white); }
-
-.fa {
-  padding: 20px;
-  font-size: 30px;
-  text-align: center;
-  text-decoration: none;
-  margin: 5px 2px;
-  border-radius: 50%; }
-
-.fa:hover {
-  opacity: 0.7; }
-
-.fa-instagram {
-  background: #125688;
-  color: white; }
-
-.fa-facebook {
-  background: #3B5998;
-  color: white; }
 
 .pic {
   display: block;
@@ -106,17 +107,6 @@ h2 {
   font-weight: 1000;
   line-height: 54px;
   padding: 15px 0 15px 0; }
-
-.parrafos {
-  color: #333333;
-  font-family: 'Source Sans Pro', sans-serif;
-  font-size: 14px;
-  line-height: 150%;
-  margin: 0;
-  text-indent: 25px;
-  text-align: center;
-  text-decoration: underline; }
-
 .questions {
   background-image: linear-gradient(gray, white);
   display: flex;
@@ -274,13 +264,7 @@ h2 {
     color: red;
   }
 
- *{
-   margin:0; padding: 0;
-   box-sizing: border-box;
-   text-transform: capitalize;
-   text-decoration: none;
-   font-family: Arial, Helvetica, sans-serif;
-   transition: all 0.4s cubic-bezier(0,1.57,.67,1.18);
+ 
  }
 /* Galeria de productos */
 .box-container{
@@ -291,7 +275,7 @@ h2 {
    background: #ccc;
  }
 .box{
-   flex: 1 1 500px;
+   flex: 1 1 600px;
    background: #fff;
    border: 1px solid rgba(0,0,0,.3);
    position: relative;
@@ -365,7 +349,6 @@ h2 {
  .box:hover .overlay a{
    transform: translateY(0px);
  }
-
 .footer{
    background-color: #24262b;
    padding-top: 20px;
@@ -382,7 +365,7 @@ h2 {
    list-style: none
  }
  .footer-col{
-   width: 25%;
+   width: 33.3%;
    padding: 0 15px;
  }
  .footer-col h4{
