--- a/scss/style.scss
+++ b/scss/style.scss
@@ -5,7 +5,7 @@
   padding: 0;
   box-sizing: border-box;
   text-decoration: none;
-  transition: all 0.4s cubic-bezier(0,1.57,.67,1.18);
+  /* transition: all 0.4s cubic-bezier(0,1.57,.67,1.18); */
 }
 body {
 	line-height: 1.5;
@@ -19,11 +19,7 @@ body {
  margin-bottom: 30px !important;
 }
 .pagename {
- padding: 0 !important;
- margin: 0 !important;
- font-size: 35px !important;
  letter-spacing: 10px !important;
- height: 150px !important;
 }
 .warning{
   line-height:25px !important; 
@@ -39,12 +35,12 @@ body {
   padding: 0 !important;
   letter-spacing: 0px !important; 
   font-size: 25px !important; 
-  height: 100px !important; 
+  height: 50px !important; 
 }
 .warning{
-  line-height:25px !important; 
-  font-size: 12px !important;
-  padding: 10px !important;
+  line-height: 25px !important;
+  font-size: 8px !important;
+  padding: 0px !important;
 }
 .questions {
   flex-direction: column !important;
@@ -54,20 +50,30 @@ body {
 }
 }
 @media (max-width:420px) {
-  .wrapper .form .inputfield{
+.wrapper .form .inputfield{
     flex-direction: column;
     align-items: flex-start;
   }
-  .wrapper .form .inputfield label{
+.wrapper .form .inputfield label{
     margin-bottom: 5px;
   }
-  .wrapper .form .inputfield.terms{
+.wrapper .form .inputfield.terms{
     flex-direction: row;
-  }
+}
+.warning {
+    line-height: 10px !important;
+    font-size: 5px !important;
+    padding: 0px !important;
+}
+.pagename {
+  padding: 0 !important;
+  letter-spacing: 0px !important; 
+  font-size: 15px !important; 
+  
+}
 }
 
-
-
+/*Acá empieza el CSS sin responsividad*/
 .pagename {
   font-size: 65px;
   font-weight: 900;
@@ -233,20 +239,6 @@ h2 {
   line-height: 60px;
   margin: 0; }
 
-/* Selector de ID */
-/* Tablas */
-#verde {
-  background-color: #8DB600; }
-
-#amarillo {
-  background-color: yellow; }
-
-#anaranjado {
-  background-color: orange; }
-
-#rojo {
-  background-color: orangered; }
-
 /* Carrousel */
   .carousel-control-prev-icon,
   .carousel-control-next-icon {
@@ -254,8 +246,6 @@ h2 {
     width: 100px;
     outline: black;
     background-size: 100%, 100%;
-    border-radius: 50%;
-    border: 1px solid black;
     background-image: none;
   }
   .carousel-control-next-icon:after  {
@@ -311,12 +301,12 @@ h2 {
    color: #ff3300;
    font-size: 20px;
  }
- .box .info .subinfo .price , span{
+ .box .info .subinfo .price span{
    font-size: 15px;
    color: #999;
    text-decoration: line-through;
  }
- .box .info .subinfo .stars , i{
+ .box .info .subinfo .stars i{
    color: orange;
    font-size: 17px;
  }
@@ -431,7 +421,6 @@ h2 {
   box-shadow: 1px 1px 2px rgba(0,0,0,0.125);
   padding: 30px;
 }
-
 .wrapper .title{
   font-size: 24px;
   font-weight: 700;
@@ -440,24 +429,20 @@ h2 {
   text-transform: uppercase;
   text-align: center;
 }
-
 .wrapper .form{
   width: 100%;
 }
-
 .wrapper .form .inputfield{
   margin-bottom: 15px;
   display: flex;
   align-items: center;
 }
-
 .wrapper .form .inputfield label{
    width: 200px;
    color: #757575;
    margin-right: 10px;
   font-size: 14px;
 }
-
 .wrapper .form .inputfield .input,
 .wrapper .form .inputfield .textarea{
   width: 100%;
@@ -468,23 +453,19 @@ h2 {
   border-radius: 3px;
   transition: all 0.3s ease;
 }
-
 .wrapper .form .inputfield .textarea{
   width: 100%;
   height: 125px;
   resize: none;
 }
-
 .wrapper .form .inputfield .input:focus,
 .wrapper .form .inputfield .textarea:focus {
   border: 1px solid #fec107;
 }
-
 .wrapper .form .inputfield p{
    font-size: 14px;
    color: #757575;
 }
-
 .wrapper .form .inputfield .btn{
   width: 100%;
   padding: 8px 10px;
@@ -496,20 +477,18 @@ h2 {
   border-radius: 3px;
   outline: none;
 }
-
 .wrapper .form .inputfield .btn:hover{
   background: gray;
 }
-
 .wrapper .form .inputfield:last-child{
   margin-bottom: 0;
 }
-
 .container-content{
   width: 1200px;
   margin: auto;
   margin-top: 40px;
 }
+/*Section de information*/
 article {
   width: 100%;
   padding: 20px;
@@ -519,7 +498,6 @@ article {
   border-radius: 6px;
   overflow: hidden;
 }
-
 article:before{
   content: '';
   width: 100%;
@@ -541,4 +519,126 @@ article p{
 article img{
   width: 100%;
   margin-top: 20px;
+}
+/*Contacto*/
+.contact{
+  position: relative;
+  min-height: 100vh;
+  padding: 50px 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background: uk;
+  background-size: cover;
+}
+.contact .content{
+  max-width: 800px;
+  text-align: center;
+}
+.contact .content h2{
+  font-size: 36px;
+  font-weight: 500;
+  color: #fff;
+}
+.contact .content p{
+  font-weight: 300;
+  color: #fff;
+}
+.container{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 30px;
+}
+.container .contactInfo{
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+}
+.container .contactInfo .box{
+  position: relative;
+  padding: 20px 0;
+  display: flex;
+}
+.container .contactInfo .box .icon{
+  min-width: 60px;
+  height: 60px;
+  background: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  font-size: 22px;
+}
+.container .contactInfo .box .text{
+  display: flex;
+  margin-left: 20px;
+  font-size: 16px;
+  color: #fff;
+  flex-direction: column;
+  font-weight: 300;
+}
+.container .contactInfo .box .text h3{
+  font-weight: 500;
+  color: #00bcd4;
+}
+.contactForm{
+  width: 40%;
+  padding: 40px;
+  background: #fff;
+}
+
+.contactFrom h2{
+  font-size: 30px;
+  color: #333;
+  font-weight: 500;
+}
+.contactForm .inputBox {
+  position: relative;
+  width: 100%;
+  margin-top: 10px;
+}
+.contactForm .inputBox input,
+.contactForm .inputBox textarea{
+  width: 100%;
+  padding: 5px 0;
+  font-size: 16px;
+  margin: 10px 0;
+  border: none;
+  border-bottom: 2px solid #333;
+  outline: none;
+}
+.contactForm .inputBox span{
+  position: absolute;
+  left: 0;
+  padding: 5px 0;
+  font-size: 16px;
+  margin: 10px 0;
+  pointer-events: none;
+  transition: 0.5;
+  color: #666;
+}
+.contactForm .inputBox input:focus ~ span,
+.contactForm .inputBox input:valid ~ span,
+.contactForm .inputBox textarea:focus ~ span,
+.contactForm .inputBox textarea:valid ~ span{
+  color: #e91e63;
+  font-size: 12px;
+  transform: translate(-20px);
+}
+.contactForm .inputBox input [type="submit"] {
+  width: 100px;
+  background: #00bcd4;
+  color: #fff;
+  border: none;
+  cursor: pointer;
+  padding: 10px;
+  font-size: 18px;
+}
+@media (max-width: 991px){
+  .contact{
+    padding: 50px;
+  }
 }
