--- a/css/todovaporstore.css
+++ b/css/todovaporstore.css
@@ -22,7 +22,18 @@ body {
   .warning {
     line-height: 25px !important;
     font-size: 14px !important;
-    padding: 12px !important; } }
+    padding: 12px !important; }
+  .contact {
+    padding: 50px !important; }
+  .container {
+    flex-direction: column !important;
+    margin-bottom: 40px !important;
+    width: 100% !important; }
+  .contactInfo {
+    margin-bottom: 40px !important;
+    width: 100% !important; }
+  .contactForm {
+    width: 100% !important; } }
 
 @media only screen and (max-width: 768px) {
   .footer-col {
@@ -39,9 +50,11 @@ body {
   .questions {
     flex-direction: column !important; }
   .questions_box {
-    width: 100% !important; } }
+    width: 100% !important; }
+  article {
+    max-width: 750px !important; } }
 
-@media (max-width: 420px) {
+@media (max-width: 425px) {
   .wrapper .form .inputfield {
     flex-direction: column;
     align-items: flex-start; }
@@ -56,7 +69,15 @@ body {
   .pagename {
     padding: 0 !important;
     letter-spacing: 0px !important;
-    font-size: 15px !important; } }
+    font-size: 15px !important; }
+  .pagesubname {
+    padding: 0 !important;
+    font-size: 18px !important;
+    letter-spacing: 0px !important; }
+  article {
+    max-width: 300px !important; }
+  article h1 {
+    font-size: 18px !important; } }
 
 /*Acá empieza el CSS sin responsividad*/
 .pagename {
@@ -90,24 +111,6 @@ body {
   width: 100%;
   padding: 100px;
   margin: 0; }
-
-h3 {
-  color: #333333;
-  font-family: 'Open Sans', sans-serif;
-  font-size: 16px;
-  font-weight: 800;
-  font-style: normal;
-  line-height: 32px;
-  padding-bottom: 15px; }
-
-h2 {
-  color: #000000;
-  font-family: 'Bitter', serif;
-  font-size: 25px;
-  font-style: normal;
-  font-weight: 1000;
-  line-height: 54px;
-  padding: 15px 0 15px 0; }
 
 /* Preguntas */
 .questions {
@@ -273,23 +276,23 @@ h2 {
   color: #666;
   font-size: 20px; }
 
-.box .info .subinfo {
+.box .info .subInfo {
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding: 15px 10px;
   border-top: 1px solid rgba(0, 0, 0, 0.3); }
 
-.box .info .subinfo .price {
+.box .info .subInfo .price {
   color: #ff3300;
   font-size: 20px; }
 
-.box .info .subinfo .price span {
+.box .info .subInfo .price span {
   font-size: 15px;
   color: #999;
   text-decoration: line-through; }
 
-.box .info .subinfo .stars i {
+.box .info .subInfo .stars i {
   color: orange;
   font-size: 17px; }
 
@@ -498,7 +501,8 @@ article h1 {
 article p {
   margin-top: 20px;
   font-size: 18px;
-  color: #000; }
+  color: #000;
+  text-align: justify; }
 
 article img {
   width: 100%;
@@ -513,8 +517,7 @@ article img {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  background: uk;
-  background-size: cover; }
+  background-color: #000; }
 
 .contact .content {
   max-width: 800px;
@@ -541,12 +544,12 @@ article img {
   display: flex;
   flex-direction: column; }
 
-.container .contactInfo .box {
+.container .contactInfo .box1 {
   position: relative;
   padding: 20px 0;
   display: flex; }
 
-.container .contactInfo .box .icon {
+.container .contactInfo .box1 .icon {
   min-width: 60px;
   height: 60px;
   background: #fff;
@@ -556,7 +559,7 @@ article img {
   border-radius: 50%;
   font-size: 22px; }
 
-.container .contactInfo .box .text {
+.container .contactInfo .box1 .text {
   display: flex;
   margin-left: 20px;
   font-size: 16px;
@@ -564,16 +567,17 @@ article img {
   flex-direction: column;
   font-weight: 300; }
 
-.container .contactInfo .box .text h3 {
+.container .contactInfo .box1 .text h3 {
   font-weight: 500;
-  color: #00bcd4; }
+  font-family: 'Poppins';
+  font-size: 17px; }
 
 .contactForm {
   width: 40%;
   padding: 40px;
   background: #fff; }
 
-.contactFrom h2 {
+.contactForm h2 {
   font-size: 30px;
   color: #333;
   font-weight: 500; }
@@ -619,7 +623,3 @@ article img {
   cursor: pointer;
   padding: 10px;
   font-size: 18px; }
-
-@media (max-width: 991px) {
-  .contact {
-    padding: 50px; } }
