--- a/css/todovaporstore.css
+++ b/css/todovaporstore.css
@@ -151,67 +151,6 @@ body {
   top: 200;
   left: 0; }
 
-/* Acá empieza la flex box */
-.flex {
-  display: flex;
-  width: 100%;
-  flex-direction: column;
-  align-items: center; }
-
-.flex__box {
-  padding: 10px 0px 100px 0px;
-  display: flex;
-  flex-direction: row; }
-
-.flex__box__component {
-  padding: 16px; }
-
-.flex__sub {
-  text-align: center;
-  font-size: 110%;
-  padding-top: 20px; }
-
-/* Acá termina la flex box */
-/* Acá empieza la grid */
-.grid-container {
-  display: grid;
-  grid-template-rows: 200px 150px 200px 150px 200px 150px;
-  grid-template-columns: 25% 25% 25% 25%;
-  grid-row-gap: 100px;
-  grid-column-gap: 10px;
-  width: 100%;
-  height: 100%;
-  background-color: darkgray; }
-
-.titulo {
-  grid-column: 1 / 5;
-  background-color: #8EBBDF;
-  border-radius: 10px; }
-
-.titulo2 {
-  grid-column: 1 / 5;
-  grid-row: 3 / 4;
-  background-color: #8EBBDF; }
-
-.titulo3 {
-  grid-column: 1 / 5;
-  grid-row: 5 / 6;
-  background-color: #8EBBDF; }
-
-.caja {
-  display: flex;
-  justify-content: center;
-  align-items: center; }
-
-/* Acá termina la grid */
-.movi:hover {
-  border-radius: 10px;
-  transform: scale(2, 2) translate(-50px, 0); }
-
-.movi2:hover {
-  border-radius: 10px;
-  transform: scale(2, 2) translate(50px, 0); }
-
 .warning {
   width: 100%;
   height: 50%;
@@ -245,12 +184,12 @@ body {
   color: red; }
 
 /* Galeria de productos */
-.box-container {
+.product-container {
   display: flex;
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
-  background: #ccc; }
+  background-image: linear-gradient(gray, white, gray); }
 
 .box {
   flex: 1 1 600px;
@@ -330,8 +269,14 @@ body {
 
 /* Footer */
 .footer {
-  background-color: #24262b;
-  padding-top: 20px; }
+  background-color: #212529;
+  padding-top: 20px;
+  padding-bottom: 15px; }
+
+.footer p {
+  text-align: justify;
+  color: #bbbbbb;
+  width: 90%; }
 
 .footer_container {
   max-width: 1170px;
@@ -361,7 +306,7 @@ ul {
   position: absolute;
   left: 0;
   bottom: -10px;
-  background-color: #e91e63;
+  background-color: orange;
   height: 2px;
   box-sizing: border-box;
   width: 50px; }
@@ -470,12 +415,12 @@ ul {
 .wrapper .form .inputfield:last-child {
   margin-bottom: 0; }
 
-.container-content {
+/*seccion de informacion*/
+.info-container {
   width: 1200px;
   margin: auto;
   margin-top: 40px; }
 
-/*Section de information*/
 article {
   width: 100%;
   padding: 20px;
@@ -484,14 +429,6 @@ article {
   position: relative;
   border-radius: 6px;
   overflow: hidden; }
-
-article:before {
-  content: '';
-  width: 100%;
-  height: 6px;
-  position: absolute;
-  top: 0;
-  left: 0; }
 
 article h1 {
   margin-top: 20px;
@@ -508,7 +445,7 @@ article img {
   width: 100%;
   margin-top: 20px; }
 
-/*Contacto*/
+/*seccion de contacto*/
 .contact {
   position: relative;
   min-height: 100vh;
