--- a/scss/style.scss
+++ b/scss/style.scss
@@ -97,7 +97,10 @@ article {
   max-width: 300px !important;
 }
 article h1{
-  font-size: 18px !important;
+  font-size: 25px !important;
+}
+article p{
+  font-size: 15px !important;
 }
 }
 
@@ -455,8 +458,9 @@ article {
 }
 article h1 {
   margin-top: 20px;
-  font-weight: 500;
+  font-weight: 600;
   font-size: 40px;
+  text-align: justify;
 }
 article p{
   margin-top: 20px;
