--- a/scss/style.scss
+++ b/scss/style.scss
@@ -443,7 +443,7 @@ article p{
 
 /*seccion de informacion*/
 .info-container{
-  width: 1200px;
+  width: 100%;
   margin: auto;
   margin-top: 40px;
 }
