--- a/scss/style.scss
+++ b/scss/style.scss
@@ -49,8 +49,12 @@ body {
 .pagename {
   padding: 0 !important;
   letter-spacing: 0px !important; 
-  font-size: 25px !important; 
-  height: 50px !important; 
+  font-size: 25px !important;
+}
+.pagesubname{
+  padding: 0 !important;
+  font-size: 22px !important;
+  letter-spacing: 0px !important;
 }
 .warning{
   line-height: 25px !important;
@@ -69,14 +73,14 @@ article {
 }
 @media only screen and (max-width:425px) {
 .wrapper .form .inputfield{
-  flex-direction: column;
-  align-items: flex-start;
+  flex-direction: column !important;
+  align-items: flex-start !important;
 }
 .wrapper .form .inputfield label{
-  margin-bottom: 5px;
+  margin-bottom: 5px !important;
   }
 .wrapper .form .inputfield.terms{
-  flex-direction: row;
+  flex-direction: row !important;
 }
 .warning {
   line-height: 10px !important;
@@ -190,110 +194,113 @@ article p{
 /* Carrousel */
 .carousel-control-prev-icon,
   .carousel-control-next-icon {
-    height: 100px;
-    width: 100px;
-    outline: black;
-    background-size: 100%, 100%;
-    background-image: none;
+  height: 100px;
+  width: 100px;
+  outline: black;
+  background-size: 100%, 100%;
+  background-image: none;
 }
 .carousel-control-next-icon:after  {
-    content: '>';
-    font-size: 55px;
-    color: red;
+  content: '>';
+  font-size: 55px;
+  color: red;
 }
 .carousel-control-prev-icon:after {
-    content: '<';
-    font-size: 55px;
-    color: red;
+  content: '<';
+  font-size: 55px;
+  color: red;
+}
+.w-75 {
+  width: 100% !important;
 }
 /* Galeria de productos */
 .product-container{
-   display: flex;
-   align-items: center;
-   justify-content: center;
-   flex-wrap: wrap;
-   background-image: linear-gradient(gray, white, gray);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  background-image: linear-gradient(gray, white, gray);
  }
 .box{
-   flex: 1 1 600px;
-   background: #fff;
-   border: 1px solid rgba(0,0,0,.3);
-   position: relative;
-   overflow: hidden;
-   margin: 20px;
- }
+  flex: 1 1 600px;
+  background: #fff;
+  border: 1px solid rgba(0,0,0,.3);
+  position: relative;
+  overflow: hidden;
+  margin: 20px;
+}
 .box .image{
-   padding: 10px;
-   background: #eee;
-   text-align: center;
+  padding: 10px;
+  background: #eee;
+  text-align: center;
  }
 .box .image img{
-   height: 350px;
-   width: 350px;
-   object-fit: cover;
-   filter: drop-shadow(0 3px 5px rbga(0,0,0.7));
- }
+  height: 350px;
+  width: 350px;
+  object-fit: cover;
+  filter: drop-shadow(0 3px 5px rbga(0,0,0.7));
+}
  .box .info .title{
-    padding: 10px;
-    color: #666;
-    font-size: 20px;
- }
+  padding: 10px;
+  color: #666;
+  font-size: 20px;
+}
  .box .info .subInfo{
-   display: flex;
-   align-items: center;
-   justify-content: space-between;
-   padding: 15px 10px;
-   border-top: 1px solid rgba(0,0,0,.3)
- }
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 15px 10px;
+  border-top: 1px solid rgba(0,0,0,.3)
+}
  .box .info .subInfo .price{
-   color: #ff3300;
-   font-size: 20px;
- }
+  color: #ff3300;
+  font-size: 20px;
+}
  .box .info .subInfo .price span{
-   font-size: 15px;
-   color: #999;
-   text-decoration: line-through;
- }
+  font-size: 15px;
+  color: #999;
+  text-decoration: line-through;
+}
  .box .info .subInfo .stars i{
-   color: orange;
-   font-size: 17px;
- }
+  color: orange;
+  font-size: 17px;
+}
  .box .overlay{
-   position: absolute;
-   top:0; left: 0;
-   height: 223px;
-   width: 100%;
-   background: rgba(0,0,0,.3);
-   display: flex;
-   align-items: center;
-   justify-content: center;
-   transition: none;
-   transform: scale(0);
- }
+  position: absolute;
+  top:0; left: 0;
+  height: 223px;
+  width: 100%;
+  background: rgba(0,0,0,.3);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: none;
+  transform: scale(0);
+}
  .box:hover .overlay{
   transform: scale(1);
  }
  .box .overlay a{
-   color: #666;
-   background: #fff;
-   margin: 10px;
-   padding: 13px 15px;
-   font-size: 15px;
-   transform: translateY(-150px);
-   transition-property: transform;
-   transition-delay: calc(.1s * var(--i));
+  color: #666;
+  background: #fff;
+  margin: 10px;
+  padding: 13px 15px;
+  font-size: 15px;
+  transform: translateY(-150px);
+  transition-property: transform;
+  transition-delay: calc(.1s * var(--i));
  }
  .box .overlay a:hover{
-   color: orange;
+  color: orange;
  }
  .box:hover .overlay a{
-   transform: translateY(0px);
+  transform: translateY(0px);
  }
  /* Footer */
 .footer{
-   background-color: #212529;
-   padding-top: 20px;
-   padding-bottom: 15px;
+  background-color: #212529;
+  padding-top: 20px;
+  padding-bottom: 15px;
  }
 .footer p{
   text-align: justify;
@@ -301,70 +308,70 @@ article p{
   width: 90%;
 }
 .footer_container{
-   max-width: 1170px;
-   margin:auto;
+  max-width: 1170px;
+  margin:auto;
  }
 .footer-row{
-   display: flex;
-   flex-wrap: wrap;
+  display: flex;
+  flex-wrap: wrap;
  }
  ul{
-   list-style: none
+  list-style: none
  }
  .footer-col{
-   width: 33.3%;
-   padding: 0 15px;
+  width: 33.3%;
+  padding: 0 15px;
  }
  .footer-col h4{
-   font-size: 18px;
-   color: #ffffff;
-   text-transform: capitalize;
-   margin-bottom: 35px;
-   font-weight: 500;
-   position: relative;
+  font-size: 18px;
+  color: #ffffff;
+  text-transform: capitalize;
+  margin-bottom: 35px;
+  font-weight: 500;
+  position: relative;
  }
  .footer-col h4::before{
-   content: '';
-   position: absolute;
-   left: 0;
-   bottom: -10px;
-   background-color: orange;
-   height: 2px;
-   box-sizing: border-box;
-   width: 50px;
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: -10px;
+  background-color: orange;
+  height: 2px;
+  box-sizing: border-box;
+  width: 50px;
  }
  .footer-col ul li:not(:last-child){
-   margin-bottom: 10px;
+  margin-bottom: 10px;
  }
  .footer-col ul li a{
-   font-size: 16px;
-   text-transform: capitalize;
-   color: #ffffff;
-   text-decoration: none;
-   font-weight: 300;
-   color: #bbbbbb;
-   display: block;
-   transition: all 0.3s ease;
+  font-size: 16px;
+  text-transform: capitalize;
+  color: #ffffff;
+  text-decoration: none;
+  font-weight: 300;
+  color: #bbbbbb;
+  display: block;
+  transition: all 0.3s ease;
   }
   .footer-col ul li a:hover{
-    color: #ffffff;
-    padding-left: 8px;
+  color: #ffffff;
+  padding-left: 8px;
   }
   .footer-col .social-links a{
-    display: inline-block;
-    height: 40px;
-    width: 40px;
-    background-color: rgba(255,255,255,0.2);
-    margin: 0 10px 10px 0;
-    text-align: center;
-    line-height: 40px;
-    border-radius: 50%;
-    color: #ffffff;
-    transition: all 0.5 ease;
+  display: inline-block;
+  height: 40px;
+  width: 40px;
+  background-color: rgba(255,255,255,0.2);
+  margin: 0 10px 10px 0;
+  text-align: center;
+  line-height: 40px;
+  border-radius: 50%;
+  color: #ffffff;
+  transition: all 0.5 ease;
   }
   .footer-col .social-links a:hover{
-   color: #24262b;
-   background-color: #ffffff;
+  color: #24262b;
+  background-color: #ffffff;
   }
 /* Formulario */
 .wrapper{
